Round corners of callout boxes

--- a/src/archaeo.tex
+++ b/src/archaeo.tex
@@ -9,7 +9,7 @@ natural choice for the nascent 8-bit game industry to disribute its wares.
 \begin{figure}[H]
   {
     \begin{adjustbox}{width=10cm,center}
-      \surface{archaeo/ia-tape.jpg}
+      \frame{\surface{archaeo/ia-tape.jpg}}
     \end{adjustbox}
   }\caption[]{It should be simple getting bytes off this\, right?}
 \end{figure}
