--- a/src/book.tex
+++ b/src/book.tex
@@ -170,7 +170,7 @@ pdfkeywords={C64, 6502, Llamasoft, Iridis Alpha, Jeff Minter}%
 % Trivia:
 % For trivia left margin
 \usepackage{scrextend}
-\usepackage{mdframed}
+\usepackage[framemethod=tikz]{mdframed}
 \newmdenv[
   topline=false,
   bottomline=false,
