--- a/src/book.tex
+++ b/src/book.tex
@@ -519,7 +519,7 @@ boxsep=0pt,left=2pt,right=2pt,top=2pt,bottom=.5pt}
 % Obsolete
 %\subfile{src/level_data_appendix_detail} % draft obsolete?
 
-%\printindex
+\printindex
 
 \subfile{src/bib}
 
